--- a/CHURN .Rmd
+++ b/CHURN .Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
 ```
 
 **Introduction**
@@ -60,15 +60,14 @@ Below is a description of the following variables:
 
 ```{r message=FALSE, warning=FALSE}
 # Log for the data which has negative inputs 
-qwe$chi_change<- log(qwe$chi_change)
-qwe$sc_change <- log(qwe$sc_change)
-qwe$login_change <- log(qwe$login_change)
-qwe$blog_change <- log(qwe$blog_change)
-qwe$view_change <- log(qwe$view_change)
+# qwe$chi_change<- log(qwe$chi_change)
+# qwe$sc_change <- log(qwe$sc_change)
+# qwe$login_change <- log(qwe$login_change)
+# qwe$blog_change <- log(qwe$blog_change)
+# qwe$view_change <- log(qwe$view_change)
 ```
 
-
-
+ **3. Visualizations**
 ```{r message=FALSE, warning=FALSE}
 
 p1 <- ggplot(data = qwe, aes(x= qwe$chi_month0, fill = qwe$churn), position="dodge")+
@@ -81,19 +80,16 @@ p1 <- ggplot(data = qwe, aes(x= qwe$chi_month0, fill = qwe$churn), position="dod
       geom_bar()
 p1
 
-p1 <- ggplot(data = qwe, aes( x= qwe$chi_month0, y =qwe$churn))+
-      ggtitle("CHI with churn month")+
-      xlim(0.5,200)+
-      # ylim(0, 200)+
-      # scale_y_continuous(limits = c(0,5))+
-      xlab("Happiness Index") + ylab("December Churn Rate")+
-      theme_minimal()+
-      geom_bar(stat="identity")+
-  facet_wrap(~churn)
+p1 <- ggplot(data = qwe, aes(x=churn, y=chi_month0, fill=churn))+
+    geom_boxplot()+
+     ggtitle("CHI by Churn Count")+
+    xlab("Churn") +
+    ylab("CHI")
+
+p1
 ```
 
-
-```{r}
+```{r message=FALSE, warning=FALSE}
 # Visualization of Average Churn Rate with customer age 
 # Replace missing value with 0 since this is a categorical value variable with 0 and 1 only 
 qwe$churn[is.na(qwe$churn)] <- 0
@@ -109,7 +105,7 @@ p2
 
 ```
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 #Boxplot visualization for churn count by account age
 
 qwe$churn[is.na(qwe$churn)] <- 0
@@ -125,4 +121,67 @@ p3<- ggplot(data = qwe1, aes(x=churn, y=age_months))+
 p3
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Explanations
+
+**4. Statistical Analyses**
+```{r message=FALSE, warning=FALSE}
+
+#T-Tests
+
+#Test 1
+test1 <- t.test(qwe[qwe$churn == "0",]$age_months,
+       qwe[qwe$churn == "1",]$age_months,
+       paired=FALSE) #Account Age, null rejected, p = 0.003057
+
+#Test 2
+test2 <- t.test(qwe[qwe$churn == "0",]$chi_month0,
+       qwe[qwe$churn== "1",]$chi_month0,
+       paired=FALSE) #CHI Score, Month 0, null rejected, p = 2.097e-13
+
+#Test 3
+test3 <- t.test(qwe[qwe$churn == "0",]$chi_change,
+       qwe[qwe$churn == "1",]$chi_change,
+       paired=FALSE) #CHI Score Change, null rejected, p < 1.571e-08
+
+#Test 4
+test4 <- t.test(qwe[qwe$churn == "0",]$sc_month0,
+       qwe[qwe$churn == "1",]$sc_month0,
+       paired=FALSE) #Support Call Month 0, null rejected, p = 6.281e-08
+
+#Test 5
+test5 <- t.test(qwe[qwe$churn == "0",]$sc_change,
+       qwe[qwe$churn == "1",]$sc_change,
+       paired=FALSE) #Support Call Change, fail to reject null, p = 0.5278
+
+#Test 6
+test6 <- t.test(qwe[qwe$churn == "0",]$sp_month0,
+       qwe[qwe$churn == "1",]$sp_month0,
+       paired=FALSE) #Support Priority Month 0, null rejected, p = 4.381e-07
+
+#Test 7
+test7 <- t.test(qwe[qwe$churn == "0",]$sp_change,
+       qwe[qwe$churn == "1",]$sp_change,
+       paired=FALSE) #Support Priority Change, fail to reject null, p = 0.5218
+
+#Test 8
+test8 <- t.test(qwe[qwe$churn == "0",]$login_change,
+       qwe[qwe$churn == "1",]$login_change,
+       paired=FALSE) #Login Change, null rejected, p = 0.0004037
+
+#Test 9
+test9 <- t.test(qwe[qwe$churn == "0",]$blog_change,
+       qwe[qwe$churn == "1",]$blog_change,
+       paired=FALSE) #Blog Change, null rejected, p = 0.01158
+
+#Test 10
+test10 <- t.test(qwe[qwe$churn == "0",]$view_change,
+       qwe[qwe$churn == "1",]$view_change,
+       paired=FALSE) #Views Change, null rejected, p = 0.05631 (borderline)
+
+#Test 11
+test11 <- t.test(qwe[qwe$churn == "0",]$days_login_change,
+       qwe[qwe$churn == "1",]$days_login_change,
+       paired=FALSE) #Views Change, null rejected, p = 5.215e-05
+
+```
+
